Улучшил сообщение о crf

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -136,7 +136,8 @@ video.editing.step=Editing
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
-message.video.crf.warn=\ud83d\udca1<i>The bigger the value, the smaller the output file size will be and the lower quality will be.</i>
+message.video.crf.warn=\ud83d\udca1<i>The bigger the value, the smaller the output file size will be and the lower quality will be \
+and higher encoding speed will be.</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
 message.compress.audio.bitrate.updated=Bitrate updated
