--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -120,7 +120,7 @@ video.editing.step=Редактирование
 video.editing.resolution.changed=Оригинальное разрешение: <b>{0}</b>\n\
 Результирующее разрешение: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Вы должны знать, что увеличение разрешения видео не означает улучшения качества.</i>
-message.video.crf.warn=\ud83d\udca1<i>Чем выше значение, тем выше будет размер выходного файла и тем ниже будет качество.</i>
+message.video.crf.warn=\ud83d\udca1<i>Чем выше значение, тем выше будет размер выходного файла и тем ниже будет качество и тем выше скорость обработки видео.</i>
 message.incompressible.audio=Я не могу сжать это аудио
 message.compress.audio.output.format=Формат сжатия: <b>{0}</b>
 message.compress.audio.output.frequency=Частота: <b>{0}Hz</b>
