--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -121,7 +121,8 @@ video.editing.step=tahrirlash
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
-message.video.crf.warn=\ud83d\udca1<i>Qiymat qanchalik baland bo'lsa, chiqadigan fayl hajmi shuncha yuqori va sifati past bo'ladi..</i>
+message.video.crf.warn=\ud83d\udca1<i>Qiymat qancha yuqori bo'lsa, chiqadigan fayl hajmi shuncha yuqori bo'ladi va sifati past \
+bo'ladi va videoni qayta ishlash tezligi oshadi.</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
 message.compress.audio.format.updated=Siqish formati yangilandi
