Максимальный размер файла по урлу 4GB

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -292,3 +292,4 @@ message.unsupported.media.source=<b>YouTube, Instagram, TikTok-ga havolalar hali
 message.copyright=<i>Ushbu material mualliflik huquqi bilan himoyalangan bo'lishi mumkin. \
 <a href="https://telegra.ph/Copyright-Claims-07-20">Batafsil ma'lumot</a>. \
 Agar ushbu material sizning huquqlaringizni buzsa, iltimos, xabar bering</i>: gadjievsaid.1995@gmail.com
+message.too.big.remote.video=<b>4 GB</b> dan katta videolarni yuklay olmayman
