Более детальная инфа по сжатию

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -149,7 +149,7 @@ message.video.non.command.features=\ud83d\udca1<b>Видео формат</b> д
 \ud83d\udca1<b>Аудио формат</b> для извлечения аудио из видео. Например: <b>MP3, OPUS</b> и т. д.\n\
 \ud83d\udca1<b>Формат субтитров</b> для извлечения субтитров из видео. Например: <b>ASS, SRT, WEBVTT</b> и т. д.\n\
 \ud83d\udca1<b>VOICE</b> для создания голосового сообщения\n\
-\ud83d\udca1<b>COMPRESS</b> для сжатия видео. Используйте команду /vedit для кастомного сжатия\n\
+\ud83d\udca1<b>COMPRESS</b> для сжатия видео. Используйте команду /vedit для кастомного сжатия с более высоким качеством\n\
 \ud83d\udca1<b>UPLOAD</b> для загрузки видео по ссылке\n\
 \ud83d\udca1<b>STREAM</b> для создания потокового видео, чтобы можно было его смотреть прямо в Телеграмм\n\
 \ud83d\udca1<b>MUTE</b> для удаления аудио из видео\n\
