--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -151,7 +151,7 @@ message.video.non.command.features=\ud83d\udca1<b>Video formati</b> videoni bosh
 \ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
 \ud83d\udca1<b>Subtitr formati</b> videodan subtitrlarni chiqarish uchun. Masalan: <b>ASS, SRT, WEBVTT</b> va boshqalar.\n\
 \ud83d\udca1<b>VOICE</b> ovozli xabar yozish\n\
-\ud83d\udca1<b>COMPRESS</b> videoni siqish uchun. Maxsus siqish uchun /vedit buyrug'idan foydalaning\n\
+\ud83d\udca1<b>COMPRESS</b> videoni siqish uchun. Maxsus siqishni uchun yuqori sifat bilan /vedit buyrug'idan foydalaning\n\
 \ud83d\udca1<b>UPLOAD</b> havoladan videoni yuklab olish uchun\n\
 \ud83d\udca1<b>STREAM</b> to'g'ridan-to'g'ri Telegram-da tomosha qilish uchun video yaratish\n\
 \ud83d\udca1<b>MUTE</b> videodan audio olib tashlash uchun\n\
