--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -287,4 +287,4 @@ If you think it is a bug then report it to <a href="https://t.me/smart_file_util
 message.unsupported.media.source=<b>Links to YouTube, TikTok, Instagram are not supported yet</b>
 message.copyright=<i>This material may be protected by copyright. <a href="https://telegra.ph/Copyright-Claims-07-20">More details</a>. \
 If this material infringes your rights, please report</i>: gadjievsaid.1995@gmail.com
-message.too.big.remote.video=I can't download videos larger than <b>{0}</b>
+message.too.big.remote.video=I can''t download videos larger than <b>{0}</b>
