--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -180,7 +180,7 @@ message.audio.non.command.features=\ud83d\udca1<b>Audio format</b> to convert au
 message.audio.probe.result=Format: <b>{0}</b>\n\
 Length: <b>{1}</b>\n\
 Size: <b>{2}</b>
-vedit.command.description=edit video
+vedit.command.description=compress, edit video
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
 message.media.cut.welcome=Send me a {0} to cut. Click <b>PROBE</b> on the keyboard to get current {0} length.
