--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -164,7 +164,7 @@ message.audio.non.command.features=\ud83d\udca1<b>Аудио формат</b> д
 message.audio.probe.result=Формат: <b>{0}</b>\n\
 Длина: <b>{1}</b>\n\
 Размер: <b>{2}</b>
-vedit.command.description=редатирование видео
+vedit.command.description=сжатие, редактирование видео
 vaimake.command.description=создать видео из картинки и аудио
 vavmerge.command.description=заменить или добавить аудио в видео
 message.media.cut.welcome=Отправьте мне {0} для обрезки. Выберите на клавитуре <b>PROBE</b> для получения текущей длины {0}.
