--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -166,7 +166,7 @@ message.audio.non.command.features=\ud83d\udca1<b>Ovoz formati</b> ovozni boshqa
 message.audio.probe.result=Formatlash: <b>{0}</b>\n\
 Uzunlik: <b>{1}</b>\n\
 Hajmi: <b>{2}</b>
-vedit.command.description=videoni tahrirlash
+vedit.command.description=siqish, videoni tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
 message.media.cut.welcome=Tartibga solish uchun menga {0} yuboring. Joriy {0} uzunligini bilish uchun klaviaturadan <b>PROBE</b> -ni tanlang.
