--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -124,7 +124,8 @@ message.video.edit.welcome=Send me a video or direct link to a video to edit. On
 Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=Video edit settings\n\n\
 Resolution: <b>{0}</b>\n\
-Crf(Quality): <b>{1}</b>
+Crf(Quality): <b>{1}</b>\n\
+Audio codec: <b>{2}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
@@ -275,9 +276,13 @@ message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
 vedit.resolution.command.name=Resolution
 vedit.crf.command.name=Crf(Quality)
+vedit.audio.codec.command.name=Audio codec
 message.crf.selected=Crf selected
+message.audio.codec.selected=Audio codec selected
 message.choose.video.crf=Choose crf on the keyboard
+message.choose.video.audio.codec=Choose audio codec on the keyboard
 message.dont.change=Don't change
+message.auto=Auto
 message.choose.edit.settings=At first choose desired settings on the keyboard
 message.video.edit.result.size=Original size: <b>{0}</b>\n\
 Result size: <b>{1}</b>
