Custom audio bit rate

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -109,7 +109,9 @@ message.video.edit.welcome=Menga tahrirlash uchun video yoki to'g'ridan-to'g'ri 
 Video haqida ma'lumot olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
 message.video.edit.settings=Videoni tahrirlash sozlamalari\n\n\
 Qaror: <b>{0}</b>\n\
-Crf(Sifat): <b>{1}</b>
+Crf(Sifat): <b>{1}</b>\n\
+Audio codec: <b>{2}</b>\n\
+Audio bitrate: <b>{3}</b>
 message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=Videoni tahrirlash
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
