--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -125,7 +125,8 @@ Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=Video edit settings\n\n\
 Resolution: <b>{0}</b>\n\
 Crf(Quality): <b>{1}</b>\n\
-Audio codec: <b>{2}</b>
+Audio codec: <b>{2}</b>\n\
+Audio bitrate: <b>{3}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
@@ -277,6 +278,7 @@ vavmerge.start.command.name=Start
 vedit.resolution.command.name=Resolution
 vedit.crf.command.name=Crf(Quality)
 vedit.audio.codec.command.name=Audio codec
+vedit.audio.botrate.command.name=Audio bitrate
 message.crf.selected=Crf selected
 message.audio.codec.selected=Audio codec selected
 message.choose.video.crf=Choose crf on the keyboard
