Custom mono or stereo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -126,11 +126,11 @@ message.video.edit.settings=Video edit settings\n\n\
 Resolution: <b>{0}</b>\n\
 Crf(Quality): <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
-Audio bitrate: <b>{3}</b>
+Audio bitrate: <b>{3}</b>\n\
+Mono or stereo: <b>{4}
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
-message.resolution.selected=Resolution selected
 message.send.video.to.edit=At first send me a video or direct link to a video to edit
 message.video.will.be.edited=Video will be edited\n\
 Global queue position: <b>{0}</b>
@@ -279,10 +279,11 @@ vedit.resolution.command.name=Resolution
 vedit.crf.command.name=Crf(Quality)
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.botrate.command.name=Audio bitrate
-message.crf.selected=Crf selected
-message.audio.codec.selected=Audio codec selected
+message.selected=Selected
 message.choose.video.crf=Choose crf on the keyboard
 message.choose.video.audio.codec=Choose audio codec on the keyboard
+message.choose.video.audio.bitrate=Choose audio bitrate on the keyboard
+message.choose.video.audio.mono.stereo=Choose audio mono or stereo on the keyboard
 message.dont.change=Don't change
 message.auto=Auto
 message.choose.edit.settings=At first choose desired settings on the keyboard
