--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -110,11 +110,11 @@ message.video.edit.settings=Настройки редактирования ви
 Разрешение: <b>{0}</b>\n\
 Crf(Качество): <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
-Audio bitrate: <b>{3}</b>
+Audio bitrate: <b>{3}</b>\n\
+Mono or stereo: <b>{4}
 message.video.edit.choose.settings=Выберите желаемые настройки на клавиатуре и нажмите на <b>Редактировать видео</b>
 edit.video.command.description=Редактировать видео
 message.choose.video.resolution=Выберите разрешение на клавиатуре
-message.resolution.selected=Разрешение выбрано
 message.send.video.to.edit=Для начала отправьте мне видео или прямую ссылку на видео для редактирования
 message.video.will.be.edited=Видео будет изменено\n\
 Место в глобальной очереди: <b>{0}</b>
@@ -276,7 +276,6 @@ vavmerge.start.command.name=Начать
 message.only.media.from.link.can.be.uploaded=Вы не отправили прямую ссылку на видео
 vedit.resolution.command.name=Разрешение
 vedit.crf.command.name=Crf(Качество)
-message.crf.selected=Crf выбран
 message.choose.video.crf=Выберите crf на клавиатуре
 message.dont.change=Не изменять
 message.choose.edit.settings=Для начала выберите желаемые настройки на клавиатуре
