--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -111,11 +111,11 @@ message.video.edit.settings=Videoni tahrirlash sozlamalari\n\n\
 Qaror: <b>{0}</b>\n\
 Crf(Sifat): <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
-Audio bitrate: <b>{3}</b>
+Audio bitrate: <b>{3}</b>\n\
+Mono or stereo: <b>{4}
 message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=Videoni tahrirlash
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
-message.resolution.selected=Ruxsat tanlandi
 message.send.video.to.edit=Avval tahrirlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
 message.video.will.be.edited=Video o''zgartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
@@ -282,7 +282,6 @@ vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
 vedit.resolution.command.name=O'lchamlari
 vedit.crf.command.name=Crf(Sifati)
-message.crf.selected=Crf tanlandi
 message.choose.video.crf=Klaviaturadan crf-ni tanlang
 message.dont.change=O'zgartirmang
 message.choose.edit.settings=Birinchidan, klaviaturada kerakli sozlamalarni tanlang
