--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -127,7 +127,8 @@ Resolution: <b>{0}</b>\n\
 Crf(Quality): <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
 Audio bitrate: <b>{3}</b>\n\
-Mono or stereo: <b>{4}
+Audio mono or stereo: <b>{4}</b>\n\
+Audio channel layout: <b>{5}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
@@ -278,12 +279,14 @@ vavmerge.start.command.name=Start
 vedit.resolution.command.name=Resolution
 vedit.crf.command.name=Crf(Quality)
 vedit.audio.codec.command.name=Audio codec
+vedit.audio.channel.layout.command.name=Audio channel layout
 vedit.audio.botrate.command.name=Audio bitrate
 message.selected=Selected
 message.choose.video.crf=Choose crf on the keyboard
 message.choose.video.audio.codec=Choose audio codec on the keyboard
 message.choose.video.audio.bitrate=Choose audio bitrate on the keyboard
 message.choose.video.audio.mono.stereo=Choose audio mono or stereo on the keyboard
+message.choose.video.audio.channel.layout=Choose audio channel layout on the keyboard
 message.dont.change=Don't change
 message.auto=Auto
 message.choose.edit.settings=At first choose desired settings on the keyboard
