--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -280,6 +280,7 @@ vedit.resolution.command.name=Resolution
 vedit.crf.command.name=Crf(Quality)
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.channel.layout.command.name=Audio channel layout
+vedit.audio.mono.stereo.command.name=Mono or stereo
 vedit.audio.botrate.command.name=Audio bitrate
 message.selected=Selected
 message.choose.video.crf=Choose crf on the keyboard
