--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -112,7 +112,7 @@ Qaror: <b>{0}</b>\n\
 Crf(Sifat): <b>{1}</b>\n\
 Audio codec: <b>{2}</b>\n\
 Audio bitrate: <b>{3}</b>\n\
-Mono or stereo: <b>{4}
+Audio channel layout: <b>{4}
 message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=Videoni tahrirlash
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
@@ -282,7 +282,14 @@ vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
 vedit.resolution.command.name=O'lchamlari
 vedit.crf.command.name=Crf(Sifati)
+vedit.audio.codec.command.name=Audio codec
+vedit.audio.mono.stereo.command.name=Audio channel layout
+vedit.audio.bitrate.command.name=Audio bitrate
 message.choose.video.crf=Klaviaturadan crf-ni tanlang
+message.choose.video.audio.codec=Klaviaturada audio kodekni tanlang
+message.choose.video.audio.bitrate=Klaviaturada audio bit tezligini tanlang
+message.choose.video.audio.mono.stereo=Klaviaturada "channel layout" -ni tanlang
+message.auto=Avtomatik
 message.dont.change=O'zgartirmang
 message.choose.edit.settings=Birinchidan, klaviaturada kerakli sozlamalarni tanlang
 message.video.edit.result.size=Asl hajmi: <b>{0}</b>\n\
