--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -223,9 +223,13 @@ Choose <b>Languages</b> button to choose language of the subtitles which you wan
 to extract all subtitles:
 extract.all.media.command.description=Extract all
 extract.by.languages.media.command.description=Languages
-message.no.watermark.welcome=I watermark any video with a picture or text. \n\n\
+message.video.no.watermark.welcome=I watermark any video with a picture or text. \n\n\
 First, set up your watermark. \n\n\
 <b>Step 1. Are we setting up a watermark from an image or text?</b>
+message.audio.no.watermark.welcome=I watermark any audio.\n\n\
+First, set up your watermark.\n\n\
+<b>Send me watermark audio or voice</b>
+message.audio.no.watermark.awaiting.audio=<b>Send me watermark audio or voice</b>
 text.watermark.command.name=Text
 image.watermark.command.name=Image
 message.watermark.text.welcome=<b>Step 2. Write your watermark text</b>
@@ -235,6 +239,7 @@ In which corner or center to place the watermark</b>
 message.watermark.text.color.welcome=<b>Step 3. Choose a text color</b>
 message.watermark.created=<b>Great! The watermark is configured</b>. Now send me a video or direct link to a video for adding the watermark.
 message.watermark.ok.welcome=I watermark any video with a picture or text. Send me a video or direct link to a video to get started.
+message.audio.watermark.ok.welcome=I watermark any audio. Send me an audio to get started
 change.watermark.command.name=\u270f\ufe0fEdit
 message.watermark.image.welcome=<b>Step 2. Send an image for the watermark</b>
 message.incorrect.watermark.position=Select the position of the watermark on the keyboard
@@ -253,6 +258,9 @@ Text: <b>{0}</b>\n\
 Font size: <b>{1}</b>\n\
 Color: <b>{2}</b>\n\
 Position: <b>{3}</b>
+message.audio.watermark=Your watermark:\n\
+Audio: /amark_audio\n\
+Start at: 3 seconds
 message.image.watermark=Your watermark:\n\
 Type: <b>Image</b>\n\
 Image: /vmark_img\n\
