--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -225,7 +225,7 @@ Siz chiqarmoqchi bo'lgan subtitr tilini tanlash uchun <b>Tillar</b> tugmasini bo
 tugmasini bosing barcha subtitrlarni chiqarish uchun:
 extract.all.media.command.description=Barchasini ajratib oling
 extract.by.languages.media.command.description=Tillar
-message.no.watermark.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman.\n\n\
+message.video.no.watermark.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman.\n\n\
 Birinchidan, moybo'yoqli belgini o'rnating.\n\n\
 <b>Qadam 1. Biz rasm yoki matndan suv belgisi o'rnatayapmizmi?</b>
 text.watermark.command.name=Matn
