--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -238,6 +238,7 @@ message.watermark.position.welcome=<b>Step {0}. You need to determine the positi
 In which corner or center to place the watermark</b>
 message.watermark.text.color.welcome=<b>Step 3. Choose a text color</b>
 message.watermark.created=<b>Great! The watermark is configured</b>. Now send me a video or direct link to a video for adding the watermark.
+message.audio.watermark.created=<b>Great! The watermark is configured</b>. Now send me an audio for adding the watermark.
 message.watermark.ok.welcome=I watermark any video with a picture or text. Send me a video or direct link to a video to get started.
 message.audio.watermark.ok.welcome=I watermark any audio. Send me an audio to get started
 change.watermark.command.name=\u270f\ufe0fEdit
@@ -246,6 +247,7 @@ message.incorrect.watermark.position=Select the position of the watermark on the
 message.incorrect.watermark.color=Choose the watermark color on your keyboard
 message.incorrect.watermark.type=<b>Step 1. Are we setting up a watermark from a picture or text? Select on the keyboard</b>
 message.incorrect.video.file=Send me a video or direct link to a video to add the watermark
+message.incorrect.audio.file=Send me an audio to add the watermark
 message.incorrect.watermark.image.height=Select the height of the watermark on your keyboard
 message.watermark.image.height.welcome=Select the height of the watermark
 message.incorrect.font.size=Select the font size on the keyboard
@@ -259,11 +261,11 @@ Font size: <b>{1}</b>\n\
 Color: <b>{2}</b>\n\
 Position: <b>{3}</b>
 message.audio.watermark=Your watermark:\n\
-Audio: /amark_audio\n\
+Audio: /amarkaudio\n\
 Start at: 3 seconds
 message.image.watermark=Your watermark:\n\
 Type: <b>Image</b>\n\
-Image: /vmark_img\n\
+Image: /vmarkimg\n\
 Height: <b>{0}</b>\n\
 Transparency: <b>{1}</b>\n\
 Position: <b>{2}</b>
