--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -251,7 +251,7 @@ message.text.watermark=Ваш водяной знак:\n\
 Позиция: <b>{3}</b>
 message.image.watermark=Ваш водяной знак:\n\
 Тип: <b>Картинка</b>\n\
-Картинка: /vmark_img\n\
+Картинка: /vmarkimg\n\
 Высота: <b>{0}</b>\n\
 Прозрачность: <b>{1}</b>\n\
 Позиция: <b>{2}</b>
