--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -257,7 +257,7 @@ Rang: <b>{2}</b>\n\
 Lavozim: <b>{3}</b>
 message.image.watermark=Sizning suv belgingiz:\n\
 Turi: <b>Rasm</b>\n\
-Rasm: /vmark_img\n\
+Rasm: /vmarkimg\n\
 Balandligi: <b>{0}</b>\n\
 Shaffoflik: <b>{1}</b>\n\
 Lavozim: <b>{2}</b>
