Добавил сообщения для всех локалей

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -228,6 +228,10 @@ extract.by.languages.media.command.description=Tillar
 message.video.no.watermark.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman.\n\n\
 Birinchidan, moybo'yoqli belgini o'rnating.\n\n\
 <b>Qadam 1. Biz rasm yoki matndan suv belgisi o'rnatayapmizmi?</b>
+message.audio.no.watermark.welcome=Men har qanday audioga suv belgisini qo'yaman.\n\n\
+Birinchidan, suv belgisini o'rnating.\n\n\
+<b>Menga suv belgisi uchun audio yuboring</b>
+message.audio.no.watermark.awaiting.audio=<b>Menga suv belgisi uchun audio yuboring</b>
 text.watermark.command.name=Matn
 image.watermark.command.name=Rasm
 message.watermark.text.welcome=<b>Qadam 2. O'zingizning moybo'yoqli matningizni yozing</b>
@@ -235,14 +239,17 @@ message.watermark.text.font.size.welcome=Matn o'rnatilgan. Shrift hajmini ko'rsa
 message.watermark.position.welcome=<b>{0} qadam. Filigraning asl videoga nisbatan o''rnini aniqlashingiz kerak. \
 Filigrani qaysi burchakda yoki markazda joylashtirish kerak</b>
 message.watermark.text.color.welcome=<b>Qadam 3. Matn rangini tanlang</b>
-message.watermark.created=<b>Zo'r! Filigran tuzilgan</b>. Endi menga moybo'yoqli qo'shish uchun video yoki to'g'ridan-to'g'ri video havolasini yuboring.
+message.watermark.created=<b>Yaxshi!</b>. Endi menga moybo'yoqli qo'shish uchun video yoki to'g'ridan-to'g'ri video havolasini yuboring.
+message.audio.watermark.created=<b>Yaxshi!</b>. Endi menga suv belgisini qo'shish uchun audio yuboring.
 message.watermark.ok.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman. Boshlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring.
+message.audio.watermark.ok.welcome=Men har qanday audioga suv belgisini qo'yaman. Avval menga audio yuboring
 change.watermark.command.name=\u270f\ufe0fTahrirlash
 message.watermark.image.welcome=<b>Qadam 2. Suv belgisi uchun rasm yuboring</b>
 message.incorrect.watermark.position=Klaviaturada moybo'yoqli joyni tanlang
 message.incorrect.watermark.color=Klaviaturada moybo'yoqli rangni tanlang
 message.incorrect.watermark.type=<b>Qadam 1. Biz rasm yoki matndan suv belgisi o'rnatayapmizmi? Klaviaturadan tanlang</b>
 message.incorrect.video.file=Filigrani qo'shish uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
+message.incorrect.audio.file=Suv belgisi qo'shish uchun menga audio yuboring
 message.incorrect.watermark.image.height=Klaviaturadagi suv belgisi balandligini tanlang
 message.watermark.image.height.welcome=Filigraning balandligini tanlang
 message.incorrect.font.size=Klaviaturada shrift hajmini tanlang
@@ -255,6 +262,9 @@ Matn: <b>{0}</b>\n\
 Shrift hajmi: <b>{1}</b>\n\
 Rang: <b>{2}</b>\n\
 Lavozim: <b>{3}</b>
+message.audio.watermark=Sizning suv belgingiz:\n\
+Audio: /amarkaudio\n\
+Boshlanish vaqti: 3 soniya
 message.image.watermark=Sizning suv belgingiz:\n\
 Turi: <b>Rasm</b>\n\
 Rasm: /vmarkimg\n\
