Команда по увеличению басов

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -110,8 +110,11 @@ concatenation.step=Merging
 message.concatenate.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Compress
-message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
+message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed
+message.audio.bass.boost.welcome=Send me an audio to bass boost. Only the last sent file will be handled
 message.audio.compress.file.not.found=At first send me an audio to compress
+message.audio.bass.boost.file.not.found=At first send me an audio to bass boost
+message.audio.choose.bass.boost=Choose bass boost on the keyboard
 message.audio.compression.choose.bitrate=Choose a <b>bitrate</b> on the keyboard and click <b>Compress</b>
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
 compress.audio.command.description=compress audio
