--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -276,6 +276,8 @@ message.stream.language=Language: <b>{0}</b>\n\nIf the language does not match w
 in your video and not in me</b>. The language is taken from the video metadata.
 message.stream.language.unknown=There is no language information in the video metadata
 vmark.command.description=add watermark to video
+amark.command.description=add watermark to audio
+bass.boost.command.description=audio bass boost
 vmerge.command.description=merge videos
 cut.audio.command.description=cut audio
 amerge.command.description=merge audios
