Анимированные водянные знаки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -235,6 +235,9 @@ First, set up your watermark.\n\n\
 message.audio.no.watermark.awaiting.audio=<b>Send me watermark audio or voice</b>
 text.watermark.command.name=Text
 image.watermark.command.name=Image
+sticker.watermark.command.name=Sticker
+gif.watermark.command.name=Gif
+video.watermark.command.name=Video
 message.watermark.text.welcome=<b>Step 2. Write your watermark text</b>
 message.watermark.text.font.size.welcome=The text is set. Specify the font size.
 message.watermark.position.welcome=<b>Step {0}. You need to determine the position of the watermark relative to the original video. \
@@ -246,6 +249,9 @@ message.watermark.ok.welcome=I watermark any video with a picture or text. Send 
 message.audio.watermark.ok.welcome=I watermark any audio. Send me an audio to get started
 change.watermark.command.name=\u270f\ufe0fEdit
 message.watermark.image.welcome=<b>Step 2. Send an image for the watermark</b>
+message.watermark.gif.welcome=<b>Step 2. Send a gif for the watermark</b>
+message.watermark.video.welcome=<b>Step 2. Send a video for the watermark</b>
+message.watermark.sticker.welcome=<b>Step 2. Send a sticker or animated sticker for the watermark</b>
 message.incorrect.watermark.position=Select the position of the watermark on the keyboard
 message.incorrect.watermark.color=Choose the watermark color on your keyboard
 message.incorrect.watermark.type=<b>Step 1. Are we setting up a watermark from a picture or text? Select on the keyboard</b>
@@ -267,11 +273,11 @@ message.audio.watermark=Your watermark:\n\
 Audio: /amarkaudio\n\
 Start at: 3 seconds
 message.image.watermark=Your watermark:\n\
-Type: <b>Image</b>\n\
-Image: /vmarkimg\n\
-Height: <b>{0}</b>\n\
-Transparency: <b>{1}</b>\n\
-Position: <b>{2}</b>
+Type: <b>{0}</b>\n\
+Watermark file: /vmarkimg\n\
+Height: <b>{1}</b>\n\
+Transparency: <b>{2}</b>\n\
+Position: <b>{3}</b>
 message.stream.language=Language: <b>{0}</b>\n\nIf the language does not match what is in the file, then <b>the problem is \
 in your video and not in me</b>. The language is taken from the video metadata.
 message.stream.language.unknown=There is no language information in the video metadata
@@ -312,3 +318,5 @@ message.unsupported.media.source=<b>Links to YouTube, TikTok, Instagram are not 
 message.copyright=<i>This material may be protected by copyright. <a href="https://telegra.ph/Copyright-Claims-07-20">More details</a>. \
 If this material infringes your rights, please report</i>: gadjievsaid.1995@gmail.com
 message.too.big.remote.video=I can''t download videos larger than <b>{0}</b>
+message.video.2.gif.max.length=I can't create gif from video longer than 60 seconds
+message.video.watermark.max.length=I can't add watermark longer than 60 seconds
