screenshot and video sample

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -320,3 +320,13 @@ If this material infringes your rights, please report</i>: gadjievsaid.1995@gmai
 message.too.big.remote.video=I can''t download videos larger than <b>{0}</b>
 message.video.2.gif.max.length=I can't create gif from video longer than 60 seconds
 message.video.watermark.max.length=I can't add watermark longer than 60 seconds
+message.vsample.welcome=Send me a video or direct link to a video to create a sample 30 seconds video
+message.vsample.awaiting.start.point=Send me start time to create sample in <b>hh:mm:ss</b> format or click <b>Random</b> \
+to create sample at random start point
+message.vscreenshot.welcome=Send me a video or direct link to a video to create a screenshot of video
+message.vscreenshot.awaiting.point=Send me time to take a screenshot in <b>hh:mm:ss</b> format or click <b>Random</b> \
+to take a screenshot at random point
+message.random=Random
+message.vscreenshot.result=Screenshot at <b>{0}</b>
+start.point.command.name=From start
+end.point.command.name=To end
