Получение туториалов для всех команд

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -161,7 +161,9 @@ vaimake.command.name=Make a video
 message.vaimake.files.canceled=Files canceled. Send me an audio and image to make a video.
 message.vaimake.click=Great! Now click <b>Make a video</b> on the keyboard
 message.vavmerge.welcome=Send me <b>video</b> and <b>audio or subtitles</b>, and click <b>Merge</b> on the keyboard. \
-I can handle only max <b>{0} audios and {1} subtitles</b> at the time.
+I can handle only max <b>{0} audios and {1} subtitles</b> at the time.\n\n\
+\ud83d\udca1<i>To avoid video and audio synchronization problem, use /vcut and /acut(@SmartAudioConverterBot) command \
+to make video and audio lengt the same</i>
 message.vavmerge.awaiting.audio.subtitles=Send me <b>audio or subtitles</b> to merge with video
 message.vavmerge.awaiting.video=Send me <b>video</b> to merge
 vavmerge.command.name=Merge
@@ -318,11 +320,14 @@ message.unsupported.media.source=<b>Links to YouTube, TikTok, Instagram are not 
 message.copyright=<i>This material may be protected by copyright. <a href="https://telegra.ph/Copyright-Claims-07-20">More details</a>. \
 If this material infringes your rights, please report</i>: gadjievsaid.1995@gmail.com
 message.too.big.remote.video=I can''t download videos larger than <b>{0}</b>
-message.video.2.gif.max.length=I can't create gif from video longer than 60 seconds
-message.video.watermark.max.length=I can't add watermark longer than 60 seconds
-message.vsample.welcome=Send me a video or direct link to a video to create a sample 30 seconds video
-message.vsample.awaiting.start.point=Send me start time to create sample in <b>hh:mm:ss</b> format or click <b>Random</b> \
-to create sample at random start point
+message.video.2.gif.max.length=I can't create gif from video longer than 300 seconds
+message.video.watermark.max.length=I can't add watermark longer than 300 seconds
+message.vsample.welcome=Send me a video or direct link to a video to create a sample video
+message.vsample.awaiting.start.point=-Send me start time to create sample in <b>hh:mm:ss</b> format. \
+For example: <b>01:10:05</b> to start cutting at <b>1 hour 10 minutes 5 seconds</b> \n\n\
+-Or click <b>Random</b> to create sample from random point\n\n\
+-Or click <b>Start</b> to create sample from 00:00:00
+message.vsample.result.caption=Sample video from <b>{0}</b>
 message.vscreenshot.welcome=Send me a video or direct link to a video to create a screenshot of video
 message.vscreenshot.awaiting.point=Send me time to take a screenshot in <b>hh:mm:ss</b> format or click <b>Random</b> \
 to take a screenshot at random point
@@ -330,3 +335,5 @@ message.random=Random
 message.vscreenshot.result=Screenshot at <b>{0}</b>
 start.point.command.name=From start
 end.point.command.name=To end
+vscreenshot.command.description=take video screenshot
+vsample.command.description=create video sample
