--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -93,8 +93,11 @@ message.concatenate.incorrect.file=Отправьте мне {0} файлы
 message.concatenate.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Сжать
-message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато.
+message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато
+message.audio.bass.boost.welcome=Отправьте мне аудио для добавления басов. Только последнее отправленное аудио будет обработано
 message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
+message.audio.bass.boost.file.not.found=Сначала отправьте аудио для добавления басов
+message.audio.choose.bass.boost=Выберите уровень басов на клавиатуре
 message.audio.compression.choose.bitrate=Выберите <b>bitrate</b> на клавиатуре и нажмите <b>Сжать</b>
 message.audio.compression.bitrate.out.of.range=Пожалуйста, выберите значение больше 0
 compress.audio.command.description=сжать аудио
@@ -142,7 +145,9 @@ vaimake.command.name=Создать видео
 message.vaimake.files.canceled=Файлы отменены. Отправьте мне аудио и картинку, чтобы создать видео.
 message.vaimake.click=Отлично! Теперь нажмите <b>Создать видео</b> на клавиатуре
 message.vavmerge.welcome=Отправьте мне <b>видео</b> и <b>аудио или субтитры</b>, и нажмите <b>Объединить</b>. \
-Я могу обработать максимум <b>{0} аудио и {1} субтитров</b> одновременно.
+Я могу обработать максимум <b>{0} аудио и {1} субтитров</b> одновременно.\n\n\
+\ud83d\udca1<i>Для избежания проблем с синхронизацией видео и аудио, используйте /vcut и /acut(@SmartAudioConverterBot) команду \
+для того, чтобы сделать видео и аудио одинаковой длины</i>
 message.vavmerge.awaiting.audio.subtitles=Пришлите мне <b>аудио или субтитры</b> для объединения с видео
 message.vavmerge.awaiting.video=Пришлите мне <b>видео</b> для объединения
 vavmerge.command.name=Объединить
@@ -260,11 +265,11 @@ message.audio.watermark=Ваш водяной знак:\n\
 Аудио: /amarkaudio\n\
 Начать с: 3 секунды
 message.image.watermark=Ваш водяной знак:\n\
-Тип: <b>Картинка</b>\n\
+Тип: <b>{0}</b>\n\
 Картинка: /vmarkimg\n\
-Высота: <b>{0}</b>\n\
-Прозрачность: <b>{1}</b>\n\
-Позиция: <b>{2}</b>
+Высота: <b>{1}</b>\n\
+Прозрачность: <b>{2}</b>\n\
+Позиция: <b>{3}</b>
 message.watermark.queued=Будет добавлен водяной знак\n\
 Место в глобальной очереди: <b>{0}</b>
 watermark.adding.step=Водяной знак
@@ -304,3 +309,30 @@ message.unsupported.media.source=<b>Ссылки на YouTube, TikTok, Instagram
 message.copyright=<i>Этот материал может быть защищен авторским правом. <a href="https://telegra.ph/Copyright-Claims-07-20">Подробнее</a>. \
 Если этот материал нарушает ваши права, сообщите об этом</i>: gadjievsaid.1995@gmail.com
 message.too.big.remote.video=Я не могу скачать видео размером более <b>{0}</b>
+message.vsample.welcome=Отправьте мне видео или прямую ссылку на видео для получения образца
+message.vsample.awaiting.start.point=-Отправьте время начала создания образца в формате <b>чч:мм:сс</b>, \
+например: <b>00:00:05</b> для начала с <b>5 секунд</b>\n\n\
+-Либо нажмите на <b>Random</b> для создания образца с случайного места\n\n\
+-Либо нажмите на <b>Start</b> для создания образца с 00:00:00
+message.vsample.result.caption=Образец с <b>{0}</b>
+message.vscreenshot.welcome=Отправьте мне видео или прямую ссылку на видео для создания скриншота видео
+message.vscreenshot.awaiting.point=-Отправьте время начала создания скриншота в формате <b>чч:мм:сс</b>, \
+например: <b>00:00:05</b> для начала с <b>5 секунд</b>\n\n\
+-Либо нажмите на <b>Random</b> для создания скриншота с случайного места\n\n\
+-Либо нажмите на <b>С начала</b> для создания скриншота с 00:00:00
+message.random=Random
+message.vscreenshot.result=Скриншот в <b>{0}</b>
+start.point.command.name=С начала
+end.point.command.name=До конца
+message.video.2.gif.max.length=Я не могу создать gif из видео длительностью более 300 секунд
+message.video.watermark.max.length=Я не могу добавить водяной знак дольше 300 секунд
+sticker.watermark.command.name=Стикер
+gif.watermark.command.name=Gif
+video.watermark.command.name=Видео
+message.watermark.gif.welcome=<b>Шаг 2. Отправьте gif для водяного знака</b>
+message.watermark.video.welcome=<b>Шаг 2. Отправьте видео для водяного знака</b>
+message.watermark.sticker.welcome=<b>Шаг 2. Отправьте скикер или анимированный стикер для водяного знака</b>
+amark.command.description=добавить водяной знак к аудио
+bass.boost.command.description=добавить басы к аудио
+vscreenshot.command.description=сделать скриншот видео
+vsample.command.description=создать образец видео
