--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -94,8 +94,11 @@ message.concatenate.incorrect.file=Menga {0} fayllarini yuboring
 message.concatenate.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Kichraytiring
-message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi yuborilgan audio siqiladi.
+message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi yuborilgan audio siqiladi
+message.audio.bass.boost.welcome=Send me audio for adding bass. Only the last audio sent will be processed
 message.audio.compress.file.not.found=Avval siqishni uchun audio yuboring
+message.audio.bass.boost.file.not.found=Avval bass qo'shish uchun audio yuboring
+message.audio.choose.bass.boost=Klaviaturada bass darajasini tanlang
 message.audio.compression.choose.bitrate=Klaviaturadan <b>bitrate</b> ni tanlang va <b>Siqish</b> tugmasini bosing
 message.audio.compression.bitrate.out.of.range=0 dan katta qiymatni tanlang
 compress.audio.command.description=ovozni siqish
@@ -144,7 +147,9 @@ message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini 
 message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
 message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va <b>Birlashtirish</b> tugmasini bosing. \
-Bir vaqtning o''zida maksimal <b>{0} audio va {1}subtitrlar</b> bilan ishlashim mumkin.
+Bir vaqtning o''zida maksimal <b>{0} audio va {1}subtitrlar</b> bilan ishlashim mumkin.\n\n\
+\ud83d\udca1<i>Video va audio sinxronlash muammolarini oldini olish uchun /vcut va /acut (@SmartAudioConverterBot) \
+buyruqlaridan foydalaning. Video va audio bir xil uzunlikda bo'lishi uchun</i>
 message.vavmerge.awaiting.audio.subtitles=Video bilan birlashtirish uchun menga <b>audio yoki subtitrlar</b> yuboring
 message.vavmerge.awaiting.video=Birlashtirish uchun menga <b>video</b> yuboring
 vavmerge.command.name=Birlashtirish
@@ -266,11 +271,11 @@ message.audio.watermark=Sizning suv belgingiz:\n\
 Audio: /amarkaudio\n\
 Boshlanish vaqti: 3 soniya
 message.image.watermark=Sizning suv belgingiz:\n\
-Turi: <b>Rasm</b>\n\
+Turi: <b>{0}</b>\n\
 Rasm: /vmarkimg\n\
-Balandligi: <b>{0}</b>\n\
-Shaffoflik: <b>{1}</b>\n\
-Lavozim: <b>{2}</b>
+Balandligi: <b>{1}</b>\n\
+Shaffoflik: <b>{2}</b>\n\
+Lavozim: <b>{3}</b>
 message.watermark.queued=Filigran qo''shiladi\n\
 Global navbatdagi joy: <b>{0}</b>
 watermark.adding.step=Suv belgisi
@@ -311,3 +316,24 @@ message.copyright=<i>Ushbu material mualliflik huquqi bilan himoyalangan bo'lish
 <a href="https://telegra.ph/Copyright-Claims-07-20">Batafsil ma'lumot</a>. \
 Agar ushbu material sizning huquqlaringizni buzsa, iltimos, xabar bering</i>: gadjievsaid.1995@gmail.com
 message.too.big.remote.video=<b>{0}</b> dan katta videolarni yuklay olmayman
+message.vsample.welcome=Namuna uchun menga video yoki to'g'ridan -to'g'ri video havolasini yuboring
+message.vsample.awaiting.start.point=-Namuna yaratishning boshlanish vaqtini <b>hh:mm:ss</b> formatida yuboring, \
+masalan: <b>00:00:05</b> 5 soniyadan boshlash\n\n\
+-Yoki tasodifiy joydan namuna yaratish uchun <b>Random</b> tugmasini bosing\n\n\
+-Yoki <b>00:00:00</b> dan namuna yaratish uchun <b>Boshidan</b> tugmasini bosing
+message.vsample.result.caption=Namuna <b>{0}</b> dan boshlab
+message.vscreenshot.welcome=Video ekran tasvirini olish uchun menga video yoki to'g'ridan -to'g'ri video havolasini yuboring
+message.vscreenshot.awaiting.point=-Ekran tasvirining boshlanish vaqtini <b>hh:mm:ss</b> formatida yuboring \
+masalan: <b>00:00:05</b> 5 soniyadan boshlash\n\n\
+-Yoki tasodifiy joydan ekran tasvirini yaratish uchun <b>Random</b> tugmasini bosing\n\n\
+-Yoki 00:00:00 dan ekran tasvirini yaratish uchun <b>Boshidan</b> tugmasini bosing
+message.random=Random
+message.vscreenshot.result=<b>{0}</b> da skrinshot
+start.point.command.name=Boshidan
+end.point.command.name=Yakun
+message.video.2.gif.max.length=Men 300 soniyadan ortiq videolardan gif yarata olmayman
+message.video.watermark.max.length=Men suv belgisini 300 soniyadan ko'proq qo'sha olmayman
+amark.command.description=audioga suv belgisini qo'shing
+bass.boost.command.description=audioga bass qo'shish
+vscreenshot.command.description=videoning skrinshotini oling
+vsample.command.description=namuna video yaratish
